--- a/index.html
+++ b/index.html
@@ -1,194 +1,198 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>고양이 가라사대</title>
-</head>
-<style>
-    body {
-        text-align: center;
-    }
-
-    .main-card button {
-        position: relative;
-        left: -45px;
-        bottom: 15px;
-    }
-
-    .favorites {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 15px;
-    }
-
-    .favorites img {
-        width: 150px;
-    }
-</style>
-
-<body>
-    <div id="app"></div>
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel">
-        const fetchCat = async (text) => {
-            const OPEN_API_DOMAIN = "https://cataas.com";
-            const response = await fetch(`${OPEN_API_DOMAIN}/cat/says/${text}?json=true`);
-            const responseJson = await response.json();
-            return `${OPEN_API_DOMAIN}/${responseJson.url}`;
-        };
-
-        const jsonLocalStorage = {
-            setItem: (key, value) => {
-                localStorage.setItem(key, JSON.stringify(value));
-            },
-            getItem: (key) => {
-                return JSON.parse(localStorage.getItem(key));
-            },
-        };
-
-        const Title = (props) => {
-            return <h1>{props.children}</h1>;
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>고양이 가라사대</title>
+    </head>
+    <style>
+        body {
+            text-align: center;
         }
-
-        const CatItem = ({ title, img }) => {
-            return (
-                <li>
-                    <p>{title}</p>
-                    <img src={img} style={{ width: '150px', border: '1px solid red' }} />
-                </li>
-            );
+        .main-card button {
+            position: relative;
+            left: -45px;
+            bottom: 15px;
         }
-
-        const Favorites = ({ favorites }) => {
-            return (
-                <ul className="favorites">
-                    {favorites.map((c) => <CatItem key={c} img={c} title="고양이" />)}
-                </ul>
-            );
+        .favorites {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
         }
+    </style>
+    <body>
+        <div id="app"></div>
 
-        const MainCard = ({ img, onHeartClick }) => {
-            return (
-                <div className="main-card">
-                    <img src={img} alt="고양이" width="400" />
-                    <button onClick={onHeartClick}>🤍</button>
-                </div>
-            );
-        }
+        <script
+            src="https://unpkg.com/react@17/umd/react.development.js"
+            crossorigin
+        ></script>
+        <script
+            src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+            crossorigin
+        ></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script type="text/babel">
+            const jsonLocalStorage = {
+                setItem: (key, value) => {
+                    localStorage.setItem(key, JSON.stringify(value));
+                },
+                getItem: (key) => {
+                    return JSON.parse(localStorage.getItem(key));
+                },
+            };
 
-        const Form = ({ updateMainImg }) => {
-            // 한글이 포함되었는지 여부 true 혹은 false 로 반환
-            const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
+            const fetchCat = async (text) => {
+                const OPEN_API_DOMAIN = "https://cataas.com";
+                const response = await fetch(
+                    `${OPEN_API_DOMAIN}/cat/says/${text}?json=true`
+                );
+                const responseJson = await response.json();
+                return `${OPEN_API_DOMAIN}/${responseJson.url}`;
+            };
 
-            const [value, setValue] = React.useState('');
-            const [errorMsg, setErrorMsg] = React.useState('');
+            const Title = (props) => {
+                return <h1>{props.children}</h1>;
+            };
 
-            const handleInputChange = (e) => {
-                setErrorMsg('');
-                const userValue = e.target.value;
-                if (includesHangul(userValue)) {
-                    setErrorMsg('한글은 입력할 수 없습니다.');
+            const Form = ({ updateMainCat }) => {
+                const includesHangul = (text) =>
+                    /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
+                const [value, setValue] = React.useState("");
+                const [errorMessage, setErrorMessage] = React.useState("");
+
+                function handleInputChange(e) {
+                    const userValue = e.target.value;
+                    setErrorMessage("");
+                    if (includesHangul(userValue)) {
+                        setErrorMessage("한글은 입력할 수 없습니다.");
+                    }
+                    setValue(userValue.toUpperCase());
                 }
-                setValue(userValue.toUpperCase());
-            }
 
-            const handleFormSubmit = (e) => {
-                e.preventDefault(); // 리플레쉬 방지
-                setErrorMsg('');
-                if (value === '') {
-                    setErrorMsg('빈 값으로 만들 수 없습니다.');
-                    return;
+                function handleFormSubmit(e) {
+                    e.preventDefault();
+                    setErrorMessage("");
+
+                    if (value === "") {
+                        setErrorMessage("빈 값으로 만들 수 없습니다.");
+                        return;
+                    }
+                    updateMainCat(value);
                 }
-                updateMainImg(value);
+
+                return (
+                    <form onSubmit={handleFormSubmit}>
+                        <input
+                            type="text"
+                            name="name"
+                            placeholder="영어 대사를 입력해주세요"
+                            value={value}
+                            onChange={handleInputChange}
+                        />
+                        <button type="submit">생성</button>
+                        <p style={{ color: "red" }}>{errorMessage}</p>
+                    </form>
+                );
+            };
+
+            function CatItem(props) {
+                return (
+                    <li>
+                        <img src={props.img} style={{ width: "150px" }} />
+                    </li>
+                );
             }
 
-            return (
-                <form onSubmit={handleFormSubmit}>
-                    <input type="text" name="name"
-                        placeholder="영어 대사를 입력해주세요"
-                        onChange={handleInputChange}
-                        value={value} />
-                    <button type="submit">생성</button>
-                    <p style={{ color: 'red' }}>{errorMsg}</p>
-                </form>
-            );
-        }
+            function Favorites({ favorites }) {
+                if (favorites.length === 0) {
+                    return (
+                        <div>사진 위 하트를 눌러 고양이 사진을 저장해봐요!</div>
+                    );
+                }
 
-        // 최상위 태그가 하나만 있어야 한다.
-        // 최상위 태그 div 로 감싸면 에러가 나지 않는다.
-        const App = () => {
-            const catImg1 = "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
-            const catImg2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
-            const catImg3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
-
-            const [counter, setCounter] = React.useState(jsonLocalStorage.getItem('nextCounter'));
-            const [mainCardImg, setMainCardImg] = React.useState(catImg1);
-            const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem('favorites') || []);
-
-            const setInitialImg = async () => {
-                const newCat = await fetchCat('FIRST CAT');
-                setMainCardImg(newCat);
+                return (
+                    <ul className="favorites">
+                        {favorites.map((cat) => (
+                            <CatItem img={cat} key={cat} />
+                        ))}
+                    </ul>
+                );
             }
 
-            React.useEffect(() => {
-                setInitialImg();
-            }, []);
+            const MainCard = ({ img, onHeartClick, alreadyFavorite }) => {
+                const heartIcon = alreadyFavorite ? "💖" : "🤍";
+                return (
+                    <div className="main-card">
+                        <img src={img} alt="고양이" width="400" />
+                        <button onClick={onHeartClick}>{heartIcon}</button>
+                    </div>
+                );
+            };
 
-            const updateMainImg = async (value) => {
-                const newCat = await fetchCat(value);
+            const App = () => {
+                const CAT1 =
+                    "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
+                const CAT2 =
+                    "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
+                const CAT3 =
+                    "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
 
-                setMainCardImg(newCat);
-                const nextCounter = counter + 1;
-                setCounter(nextCounter);
-                jsonLocalStorage.setItem('nextCounter', nextCounter);
-            }
+                const [counter, setCounter] = React.useState(
+                    jsonLocalStorage.getItem("counter")
+                );
+                const [mainCat, setMainCat] = React.useState(CAT1);
+                const [favorites, setFavorites] = React.useState(
+                    jsonLocalStorage.getItem("favorites") || []
+                );
 
-            const handleHeartClick = () => {
-                const nextFavorites = [...favorites, mainCardImg];
-                setFavorites(nextFavorites);
-                jsonLocalStorage.setItem('favorites', nextFavorites);
-            }
+                const alreadyFavorite = favorites.includes(mainCat);
 
-            return (
-                <div>
-                    <Title>{counter}번째 제목입니다.</Title>
-                    <Form updateMainImg={updateMainImg} />
-                    <MainCard img={mainCardImg} onHeartClick={handleHeartClick} />
-                    <Favorites favorites={favorites} />
-                </div >
-            );
-        }
+                async function setInitialCat() {
+                    const newCat = await fetchCat("First cat");
+                    console.log(newCat);
+                    setMainCat(newCat);
+                }
 
-        ReactDOM.render(<App />, document.querySelector('#app'));
+                React.useEffect(() => {
+                    setInitialCat();
+                }, []);
 
-        // // 1. 좋아요 버튼 찾기
-        // const likeButton = document.querySelector(".main-card button");
-        // // 2. 좋아요 버튼 눌렀을 때 이벤트
-        // likeButton.addEventListener("click", function () {
-        //     // 3. 하트 색 바꾸기
-        //     likeButton.innerHTML = "❤️";
+                async function updateMainCat(value) {
+                    const newCat = await fetchCat(value);
 
-        //     // 4. 고양이 사진을 추가할 곳 찾기
-        //     const favorites = document.querySelector(".favorites");
-        //     // 5. 새로운 고양이 사진 만들기
-        //     const newFavoriteImage = document.createElement("img");
-        //     newFavoriteImage.src =
-        //         "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
-        //     // 6. 고양이 사진을 감싸는 li태그 만들기
-        //     const li = document.createElement("li");
-        //     // 7. li태그에 고양이 사진 넣기
-        //     li.appendChild(newFavoriteImage);
-        //     // 8. 방금 만든 요소 넣기
-        //     favorites.appendChild(li);
-        // });
-    </script>
-</body>
+                    setMainCat(newCat);
+                    const nextCounter = counter + 1;
+                    setCounter(nextCounter);
+                    jsonLocalStorage.setItem("counter", nextCounter);
+                }
 
+                function handleHeartClick() {
+                    const nextFavorites = [...favorites, mainCat];
+                    setFavorites(nextFavorites);
+                    jsonLocalStorage.setItem("favorites", nextFavorites);
+                }
+
+                return (
+                    <div>
+                        <Title>{counter}번째 고양이 가라사대</Title>
+                        <Form updateMainCat={updateMainCat} />
+                        <MainCard
+                            img={mainCat}
+                            onHeartClick={handleHeartClick}
+                            alreadyFavorite={alreadyFavorite}
+                        />
+                        <Favorites favorites={favorites} />
+                    </div>
+                );
+            };
+
+            const 여기다가그려 = document.querySelector("#app");
+
+            ReactDOM.render(<App />, 여기다가그려);
+        </script>
+    </body>
 </html>
